set proper env and fix typo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,9 +47,9 @@ add_library(hignn SHARED ${sources} interface/HignnInterface.cpp)
 set_target_properties(hignn PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
 
 target_include_directories(hignn SYSTEM PUBLIC ${PYTHON_INCLUDE_DIRS})
-target_link_libraries(hignn "${VTK_LIBRARIES}")
-target_link_libraries(hignn Kokkos::kokkos)
-target_link_libraries(hignn "${TORCH_LIBRARIES}")
-target_link_libraries(hignn "${MPI_CXX_LIBRARIES}")
-target_link_libraries(hignn pybind11::pybind11)
-target_link_libraries(hignn TBB::tbb)
+target_link_libraries(hignn PUBLIC "${VTK_LIBRARIES}")
+target_link_libraries(hignn PUBLIC Kokkos::kokkos)
+target_link_libraries(hignn PUBLIC "${TORCH_LIBRARIES}")
+target_link_libraries(hignn PUBLIC "${MPI_CXX_LIBRARIES}")
+target_link_libraries(hignn PUBLIC pybind11::pybind11)
+target_link_libraries(hignn PUBLIC TBB::tbb)
