--- a/script/Dockerfile.hignn
+++ b/script/Dockerfile.hignn
@@ -31,7 +31,7 @@ RUN wget https://www.open-mpi.org//software/ompi/v4.1/downloads/openmpi-4.1.5.ta
 RUN cd /opt/ && \
     git clone https://github.com/kokkos/kokkos.git kokkos-source && \
     cd kokkos-source && \
-    git checkout release-candidate-4.2.01 && \
+    git checkout 4.5.00 && \
     mkdir build && \
     cd build && \
     cmake -D CMAKE_INSTALL_PREFIX=/opt/kokkos -D Kokkos_ENABLE_OPENMP=On -D CMAKE_CXX_STANDARD=17 -D BUILD_SHARED_LIBS=On .. && \
@@ -40,14 +40,20 @@ RUN cd /opt/ && \
     cd /opt/ && \
     rm -rf kokkos-source
 
-RUN pip3 install --no-cache-dir torch==2.2.1 torchvision==0.17.0 torchaudio==2.2.1 --index-url https://download.pytorch.org/whl/cpu
-RUN wget https://download.pytorch.org/libtorch/cpu/libtorch-cxx11-abi-shared-with-deps-2.2.1%2Bcpu.zip && \
-    unzip libtorch-cxx11-abi-shared-with-deps-2.2.1+cpu.zip && \
-    mv libtorch /opt/libtorch && \
-    rm -rf libtorch-cxx11-abi-shared-with-deps-2.2.1+cpu.zip libtorch
+ENV _GLIBCXX_USE_CXX11_ABI=1
+RUN cd /opt/ && \
+    git clone --recursive https://github.com/pytorch/pytorch && \
+    cd pytorch && \
+    git checkout v2.5.0
+RUN cd /opt/pytorch && \
+    pip3 install --upgrade --upgrade-strategy eager -r requirements.txt && \
+    pip3 install --upgrade cmake && \
+    git submodule sync && \
+    git submodule update --init --recursive && \
+    MAX_JOB=$(nproc) BUILD_CAFFE2=OFF BUILD_LITE_INTERPRETER=OFF python3 setup.py develop
 
 # PyTorch Geometric
-RUN pip3 install --no-cache-dir torch_geometric pyg_lib torch_scatter torch_sparse torch_cluster torch_spline_conv -f https://data.pyg.org/whl/torch-2.2.1+cpu.html
+RUN pip3 install --no-cache-dir torch_geometric pyg_lib torch_scatter torch_sparse torch_cluster torch_spline_conv -f https://data.pyg.org/whl/torch-2.5.0+cpu.html
 
 # environment variables
 ENV PATH="${PATH}:/opt/openmpi/bin"
@@ -135,3 +141,5 @@ ENV VTK_DIR=/opt/vtk-build/lib/cmake/vtk-9.1
 
 # clean up
 RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+
+ENV PYTHONPATH=/opt/pytorch:$PYTHONPATH
