--- a/script/Dockerfile.hignn.Amprere
+++ b/script/Dockerfile.hignn.Amprere
@@ -52,7 +52,7 @@ RUN cd /opt/pytorch && \
     pip3 install --upgrade cmake && \
     git submodule sync && \
     git submodule update --init --recursive && \
-    CMAKE_PREFIX_PATH="$(python3 -c "import site; print(site.getsitepackages()[0])")/" MAX_JOB=$(nproc) TORCH_CUDA_ARCH_LIST="8.6" BUILD_CAFFE2=OFF BUILD_LITE_INTERPRETER=OFF python3 setup.py develop
+    MAX_JOB=$(nproc) TORCH_CUDA_ARCH_LIST="8.6" BUILD_CAFFE2=OFF BUILD_LITE_INTERPRETER=OFF python3 setup.py develop
 
 # PyTorch Geometric
 RUN pip3 install --no-cache-dir torch_geometric pyg_lib torch_scatter torch_sparse torch_cluster torch_spline_conv -f https://data.pyg.org/whl/torch-2.5.0+cu118.html
