--- a/script/Dockerfile.hignn.Amprere
+++ b/script/Dockerfile.hignn.Amprere
@@ -46,23 +46,26 @@ ENV _GLIBCXX_USE_CXX11_ABI=1
 RUN cd /opt/ && \
     git clone --recursive https://github.com/pytorch/pytorch && \
     cd pytorch && \
-    git checkout v2.5.0
+    git checkout v2.6.0
 RUN cd /opt/pytorch && \
     pip3 install --upgrade --upgrade-strategy eager -r requirements.txt && \
-    pip3 install --upgrade cmake && \
+    pip3 install --upgrade cmake==3.31.4 && \
     git submodule sync && \
     git submodule update --init --recursive && \
     MAX_JOB=$(nproc) TORCH_CUDA_ARCH_LIST="8.6" BUILD_CAFFE2=OFF BUILD_LITE_INTERPRETER=OFF python3 setup.py develop
 
+ENV PYTHONPATH=/opt/pytorch:$PYTHONPATH
+ENV LibTorch_PATH=/opt/libtorch
+
 # PyTorch Geometric
-RUN pip3 install --no-cache-dir torch_geometric pyg_lib torch_scatter torch_sparse torch_cluster torch_spline_conv -f https://data.pyg.org/whl/torch-2.5.0+cu118.html
+RUN FORCE_CUDA=1 MAX_JOB=$(nproc) TORCH_CUDA_ARCH_LIST="8.6" pip3 install --no-cache-dir --no-build-isolation git+https://github.com/pyg-team/pyg-lib.git && \
+    FORCE_CUDA=1 MAX_JOB=$(nproc) TORCH_CUDA_ARCH_LIST="8.6" pip3 install --no-cache-dir torch_geometric torch_scatter torch_sparse torch_cluster torch_spline_conv
 
 # environment variables
 ENV PATH="${PATH}:/opt/openmpi/bin"
 ENV OMPI_ALLOW_RUN_AS_ROOT_CONFIRM=1
 ENV OMPI_ALLOW_RUN_AS_ROOT=1
 ENV Kokkos_PATH=/opt/kokkos
-ENV LibTorch_PATH=/opt/libtorch
 
 ENV OMP_PROC_BIND=spread
 ENV OMP_PLACES=sockets
@@ -143,5 +146,3 @@ ENV VTK_DIR=/opt/vtk-build/lib/cmake/vtk-9.1
 
 # clean up
 RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
-
-ENV PYTHONPATH=/opt/pytorch:$PYTHONPATH
