--- a/python/filament_partilce_cloud/config.json
+++ b/python/filament_partilce_cloud/config.json
@@ -4,22 +4,32 @@
         "_type": "Type of cloud to generate (options: 'filament_cloud', 'particle_cloud', 'filament_particle_cloud')",
 
         "particle": {
-            "n_particle": 100000,
+            "n_particle": 21504,
             "min_dist": 2.1,
-            "R1": 420.0,
-            "R2": 520.0,
+            "R1": 240.0,
+            "R2": 300.0,
             "_description": "Parameters related to the particle cloud"
         },
       
         "filament": {
-            "n_filament": 5120,
+            "n_filament": 1024,
             "n_chain": 21,
             "rest_length": 3,
             "min_dist": 2.1,
             "R1": 0.0,
-            "R2": 420.0,
+            "R2": 240.0,
+            "k_t": 20,
+            "k_b": 50,
             "_description": "Parameters related to the filament chains"
         }
+    },
+
+    "simulation": {
+        "gravitational_force": -1.0,
+        "dt": 0.005,
+        "t_max": 10000,
+        "t_meas": 100,
+        "_description": "Parameters related to the simulation"
     }
   }
   
