update docker build setup

--- a/script/Dockerfile.hignn.Amprere
+++ b/script/Dockerfile.hignn.Amprere
@@ -35,7 +35,7 @@ RUN cd /opt/ && \
     git checkout 4.5.00 && \
     mkdir build && \
     cd build && \
-    cmake -D CMAKE_INSTALL_PREFIX=/opt/kokkos -D Kokkos_ENABLE_CUDA=On -D Kokkos_CUDA_DIR=/usr/local/cuda -D Kokkos_ARCH_AMPERE86=On -D Kokkos_ENABLE_OPENMP=On -D CMAKE_CXX_STANDARD=17 -D BUILD_SHARED_LIBS=On -D CMAKE_POSITION_INDEPENDENT_CODE=On -D_GLIBCXX_USE_CXX11_ABI=0 .. && \
+    cmake -D CMAKE_INSTALL_PREFIX=/opt/kokkos -D Kokkos_ENABLE_CUDA=On -D Kokkos_CUDA_DIR=/usr/local/cuda -D Kokkos_ARCH_AMPERE86=On -D Kokkos_ENABLE_OPENMP=On -D CMAKE_CXX_STANDARD=17 -D BUILD_SHARED_LIBS=On -D CMAKE_POSITION_INDEPENDENT_CODE=On -D_GLIBCXX_USE_CXX11_ABI=1 .. && \
     make -j$(nproc) && \
     make install && \
     cd /opt/ && \
@@ -46,16 +46,20 @@ ENV _GLIBCXX_USE_CXX11_ABI=1
 RUN cd /opt/ && \
     git clone --recursive https://github.com/pytorch/pytorch && \
     cd pytorch && \
-    git checkout v2.5.0
+    git checkout v2.6.0
 RUN cd /opt/pytorch && \
     pip3 install --upgrade --upgrade-strategy eager -r requirements.txt && \
-    pip3 install --upgrade cmake && \
+    pip3 install --upgrade cmake==3.31.4 && \
     git submodule sync && \
     git submodule update --init --recursive && \
-    CMAKE_PREFIX_PATH="$(python3 -c "import site; print(site.getsitepackages()[0])")/" MAX_JOB=$(nproc) TORCH_CUDA_ARCH_LIST="8.6" BUILD_CAFFE2=OFF BUILD_LITE_INTERPRETER=OFF python3 setup.py develop
+    MAX_JOB=$(nproc) TORCH_CUDA_ARCH_LIST="8.6" BUILD_CAFFE2=OFF BUILD_LITE_INTERPRETER=OFF python3 setup.py develop
+
+ENV PYTHONPATH=/opt/pytorch:$PYTHONPATH
+ENV LibTorch_PATH=/opt/libtorch
 
 # PyTorch Geometric
-RUN pip3 install --no-cache-dir torch_geometric pyg_lib torch_scatter torch_sparse torch_cluster torch_spline_conv -f https://data.pyg.org/whl/torch-2.5.0+cu118.html
+RUN FORCE_CUDA=1 MAX_JOB=$(nproc) TORCH_CUDA_ARCH_LIST="8.6" pip3 install --no-cache-dir --no-build-isolation git+https://github.com/pyg-team/pyg-lib.git && \
+    FORCE_CUDA=1 MAX_JOB=$(nproc) TORCH_CUDA_ARCH_LIST="8.6" pip3 install --no-cache-dir torch_geometric torch_scatter torch_sparse torch_cluster torch_spline_conv
 
 # environment variables
 ENV PATH="${PATH}:/opt/openmpi/bin"
@@ -141,7 +145,7 @@ RUN cd /opt/ && \
 
 ENV VTK_DIR=/opt/vtk-build/lib/cmake/vtk-9.1
 
+RUN pip3 install vtk
+
 # clean up
 RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
-
-ENV PYTHONPATH=/opt/pytorch:$PYTHONPATH
