--- a/script/Dockerfile.hignn.AdaLovelace
+++ b/script/Dockerfile.hignn.AdaLovelace
@@ -145,7 +145,7 @@ RUN cd /opt/ && \
 
 ENV VTK_DIR=/opt/vtk-build/lib/cmake/vtk-9.1
 
-RUN pip3 install vtk
+RUN pip3 install vtk pytest
 
 # clean up
 RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
